force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/WhatChanged_Classification_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Admin-configurable classification rules for WhatChanged. Active rules are evaluated in Sort Order; the first rule whose non-blank match criteria all match (AND) assigns the Category and optional Severity. Unmatched events fall back to the built-in keyword engine.</description>
    <label>WhatChanged Classification Rule</label>
    <pluralLabel>WhatChanged Classification Rules</pluralLabel>
</CustomObject>