force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>40</length>
    <type>Text</type>
    <description>Category to assign: DEPLOYMENT, AUTOMATION, ACCESS, SECURITY, DATA_MODEL, CODE, UI, INTEGRATION, USER_ADMIN, CONFIGURATION, OTHER. Blank = keep engine-derived category.</description>
</CustomField>