force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>Only active rules are evaluated.</description>
</CustomField>