force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/fields/Match_Action_Contains__c.field-meta.xml
<CustomField>
    <fullName>Match_Action_Contains__c</fullName>
    <label>Match Action Contains</label>
    <length>255</length>
    <type>Text</type>
    <description>Case-insensitive substring matched against SetupAuditTrail.Action. Blank = not evaluated. All non-blank criteria must match (AND).</description>
</CustomField>