force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/fields/Match_Display_Contains__c.field-meta.xml
<CustomField>
    <fullName>Match_Display_Contains__c</fullName>
    <label>Match Display Contains</label>
    <length>255</length>
    <type>Text</type>
    <description>Case-insensitive substring matched against SetupAuditTrail.Display. Blank = not evaluated.</description>
</CustomField>