force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/fields/Match_Section_Contains__c.field-meta.xml
<CustomField>
    <fullName>Match_Section_Contains__c</fullName>
    <label>Match Section Contains</label>
    <length>255</length>
    <type>Text</type>
    <description>Case-insensitive substring matched against SetupAuditTrail.Section. Blank = not evaluated.</description>
</CustomField>