force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
    <description>Severity to assign: INFO, LOW, MEDIUM, HIGH, CRITICAL. Blank = keep engine-derived severity.</description>
</CustomField>