force-app/main/default/objects/WhatChanged_Classification_Rule__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
    <description>Evaluation order (ascending). First matching active rule wins.</description>
</CustomField>